Move out compile task to omega